Được tạo bằng Colab

--- a/test-US-stock.ipynb
+++ b/test-US-stock.ipynb
@@ -1472,7 +1472,8 @@
         "    ticker = yf.Ticker(ticker_symbol)\n",
         "    data = ticker.history(start=\"2024-01-01\", end=\"2025-12-31\")['Close']\n",
         "\n",
-        "    # Tách train/test\n",
+        "    # Train set 2024\n",
+        "    # Test set 2025\n",
         "    train = data['2024-01-01':'2024-12-31']\n",
         "    test = data['2025-01-01':'2025-12-31']\n",
         "\n",
@@ -1533,11 +1534,11 @@
         "    plot_data.append((name, dates, actual, predicted))\n"
       ],
       "metadata": {
-        "id": "w4kuwUHdP3Oj",
-        "outputId": "c6b7f975-1775-421b-e4fb-f2a30dabfab5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w4kuwUHdP3Oj",
+        "outputId": "c6b7f975-1775-421b-e4fb-f2a30dabfab5"
       },
       "execution_count": 23,
       "outputs": [
@@ -1571,12 +1572,12 @@
         "plt.show()\n"
       ],
       "metadata": {
-        "id": "asQuISH2RgJt",
-        "outputId": "6fe88815-4923-4c3a-ca26-a2ed64e7ced9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "asQuISH2RgJt",
+        "outputId": "6fe88815-4923-4c3a-ca26-a2ed64e7ced9"
       },
       "execution_count": 24,
       "outputs": [
@@ -1605,11 +1606,11 @@
         "print(f\"MAPE: {avg_mape:.2f}%\")\n"
       ],
       "metadata": {
-        "id": "Vk6kex_9RiZb",
-        "outputId": "9115772a-19f9-4f6f-ed4a-97798d35b528",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Vk6kex_9RiZb",
+        "outputId": "9115772a-19f9-4f6f-ed4a-97798d35b528"
       },
       "execution_count": 25,
       "outputs": [
