--- a/test-US-stock.ipynb
+++ b/test-US-stock.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 26,
       "metadata": {
         "id": "Cux9LveKNdmz"
       },
@@ -18,14 +18,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
         },
         "id": "ilWld_zfNdm0",
-        "outputId": "1bbdd4d5-54b7-4ff5-9ee4-5b6fc92576d3"
+        "outputId": "edc181ec-28cd-47a2-bc05-1519b379ab43"
       },
       "outputs": [
         {
@@ -64,7 +64,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8ef2db0d-ed7c-4575-aef9-24327e833e46\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-23ae4ee8-2837-4dbf-8732-c9fec7bc44b2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -220,7 +220,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8ef2db0d-ed7c-4575-aef9-24327e833e46')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-23ae4ee8-2837-4dbf-8732-c9fec7bc44b2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -272,12 +272,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-8ef2db0d-ed7c-4575-aef9-24327e833e46 button.colab-df-convert');\n",
+              "        document.querySelector('#df-23ae4ee8-2837-4dbf-8732-c9fec7bc44b2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-8ef2db0d-ed7c-4575-aef9-24327e833e46');\n",
+              "        const element = document.querySelector('#df-23ae4ee8-2837-4dbf-8732-c9fec7bc44b2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -297,8 +297,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-aa057a74-d902-43a0-b6dd-bf38aea46e2a\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-aa057a74-d902-43a0-b6dd-bf38aea46e2a')\"\n",
+              "<div id=\"df-9d656d3a-d4b9-4f35-a769-89bcf3a146fa\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9d656d3a-d4b9-4f35-a769-89bcf3a146fa')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -417,14 +417,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-aa057a74-d902-43a0-b6dd-bf38aea46e2a button');\n",
+              "        document.querySelector('#df-9d656d3a-d4b9-4f35-a769-89bcf3a146fa button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_ba8e736a-d888-4224-8bd5-04dd9f3ab507\">\n",
+              "  <div id=\"id_62764cd8-231d-4438-a297-ce67fc685bae\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -468,7 +468,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_ba8e736a-d888-4224-8bd5-04dd9f3ab507 button.colab-df-generate');\n",
+              "        document.querySelector('#id_62764cd8-231d-4438-a297-ce67fc685bae button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -489,7 +489,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 27
         }
       ],
       "source": [
@@ -507,14 +507,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
         },
         "id": "FSMdXYYYNdm1",
-        "outputId": "d76a59b3-f085-442c-b50f-60e8dc342db3"
+        "outputId": "74811251-352c-4160-d1d2-8b6fcec39c0b"
       },
       "outputs": [
         {
@@ -553,7 +553,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-204df38f-93f0-4972-8d30-8057b5935a8e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2ec55cf7-d2f0-458a-8ba0-0f133ccb2178\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -709,7 +709,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-204df38f-93f0-4972-8d30-8057b5935a8e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2ec55cf7-d2f0-458a-8ba0-0f133ccb2178')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -761,12 +761,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-204df38f-93f0-4972-8d30-8057b5935a8e button.colab-df-convert');\n",
+              "        document.querySelector('#df-2ec55cf7-d2f0-458a-8ba0-0f133ccb2178 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-204df38f-93f0-4972-8d30-8057b5935a8e');\n",
+              "        const element = document.querySelector('#df-2ec55cf7-d2f0-458a-8ba0-0f133ccb2178');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -786,8 +786,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-6b75235f-8dbe-4712-bb0d-6c5e60ccf7c7\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b75235f-8dbe-4712-bb0d-6c5e60ccf7c7')\"\n",
+              "<div id=\"df-24762719-65f4-475e-af06-d1889e4f807f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-24762719-65f4-475e-af06-d1889e4f807f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -906,14 +906,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-6b75235f-8dbe-4712-bb0d-6c5e60ccf7c7 button');\n",
+              "        document.querySelector('#df-24762719-65f4-475e-af06-d1889e4f807f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_ce3d72ae-cc57-48a5-94a7-a5cfa5c80f4b\">\n",
+              "  <div id=\"id_cb1a39f5-e8bd-431a-9c8a-5e7a0926cec0\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -957,7 +957,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_ce3d72ae-cc57-48a5-94a7-a5cfa5c80f4b button.colab-df-generate');\n",
+              "        document.querySelector('#id_cb1a39f5-e8bd-431a-9c8a-5e7a0926cec0 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -978,7 +978,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 28
         }
       ],
       "source": [
@@ -987,14 +987,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 29,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
         },
         "id": "bXeJI7AGNdm1",
-        "outputId": "de444c63-825d-49a9-92d8-7855479099e5"
+        "outputId": "c4dfa11a-c62c-46ef-9963-e6c6e530aa86"
       },
       "outputs": [
         {
@@ -1033,7 +1033,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-52953fff-47bf-4a5c-8b15-ecbdf4ae96cb\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d8e2cdfb-62ee-4257-b73d-bbac678868d6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1189,7 +1189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-52953fff-47bf-4a5c-8b15-ecbdf4ae96cb')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d8e2cdfb-62ee-4257-b73d-bbac678868d6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1241,12 +1241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-52953fff-47bf-4a5c-8b15-ecbdf4ae96cb button.colab-df-convert');\n",
+              "        document.querySelector('#df-d8e2cdfb-62ee-4257-b73d-bbac678868d6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-52953fff-47bf-4a5c-8b15-ecbdf4ae96cb');\n",
+              "        const element = document.querySelector('#df-d8e2cdfb-62ee-4257-b73d-bbac678868d6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1266,8 +1266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-4faf0642-b851-438e-ad58-b23c579f467e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4faf0642-b851-438e-ad58-b23c579f467e')\"\n",
+              "<div id=\"df-ca1a54e1-519f-4d10-82cc-3d4c98e0b4fb\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-ca1a54e1-519f-4d10-82cc-3d4c98e0b4fb')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1386,14 +1386,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-4faf0642-b851-438e-ad58-b23c579f467e button');\n",
+              "        document.querySelector('#df-ca1a54e1-519f-4d10-82cc-3d4c98e0b4fb button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_d3be3293-da1c-4972-af5b-e2ee233bf049\">\n",
+              "  <div id=\"id_df468bc8-2a57-4941-8b39-32270105c334\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -1437,7 +1437,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_d3be3293-da1c-4972-af5b-e2ee233bf049 button.colab-df-generate');\n",
+              "        document.querySelector('#id_df468bc8-2a57-4941-8b39-32270105c334 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -1458,7 +1458,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 29
         }
       ],
       "source": [
@@ -1517,7 +1517,7 @@
       "metadata": {
         "id": "JD4Tw2-4P2m9"
       },
-      "execution_count": 22,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -1538,9 +1538,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "w4kuwUHdP3Oj",
-        "outputId": "c6b7f975-1775-421b-e4fb-f2a30dabfab5"
+        "outputId": "a0546a61-1a76-4a90-de60-43f652a74b1e"
       },
-      "execution_count": 23,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -1577,9 +1577,9 @@
           "height": 1000
         },
         "id": "asQuISH2RgJt",
-        "outputId": "6fe88815-4923-4c3a-ca26-a2ed64e7ced9"
+        "outputId": "127758b1-602a-41cb-fc38-6fa962af0083"
       },
-      "execution_count": 24,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1610,16 +1610,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Vk6kex_9RiZb",
-        "outputId": "9115772a-19f9-4f6f-ed4a-97798d35b528"
+        "outputId": "50658c15-2fb1-4bce-df80-45e18bdfeaa2"
       },
-      "execution_count": 25,
+      "execution_count": 33,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "📊 Trung bình trên cả 3 chỉ số:\n",
+            " Trung bình trên cả 3 chỉ số:\n",
             "MAE: 258.09\n",
             "MSE: 201396.23\n",
             "RMSE: 390.62\n",
